--- a/client/src/pages/Inbox/inbox.css
+++ b/client/src/pages/Inbox/inbox.css
@@ -35,7 +35,27 @@
 }
 
 .selectedUserContainer {
-    display: flex;
-    padding: 10px;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(1, 1fr);
     gap: calc(var(--spacing));
+    padding: 5px;
+}
+
+@media only screen and (max-width: 768px) {
+    .selectedUserContainer {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media only screen and (max-width: 480px) {
+    .selectedUserContainer {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media only screen and (max-width: 320px) {
+    .selectedUserContainer {
+        grid-template-columns: 1fr;
+    }
 }
